# desensitization

./: .gitignore  LICENSE  PACKAGING.md  README.md  index.html  package-lock.json  package.json  文件脱敏处理工具-安装包.dmg  文件脱敏处理工具.dmg
scripts/: build-web.mjs  generate-macos-dock-icon.mjs  llvm-windres-wrapper.sh
src-tauri/: Cargo.toml  android-debug.keystore  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
文件脱敏处理工具.app/Contents/: Info.plist
文件脱敏处理工具.app/Contents/MacOS/: desensitization-tool
