[package]
name = "desensitization-tool"
version = "1.0.0"
description = "文档脱敏处理工具"
authors = ["chen"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "desensitization_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
